increased the gap between the header and top, applied correct background color to placeholder image

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 150px;
     background: #1F2937;
 }
 .right-links {
@@ -39,7 +39,7 @@ body {
 }
 .top-right {
     display: flex;
-    background-color: #E5E7EB;
+    background-color: #6c737c;
     color: #1F2937;
     flex-direction: column;
     align-items: center;
